--- a/src/app/components/activity/activity.component.html
+++ b/src/app/components/activity/activity.component.html
@@ -1,8 +1,5 @@
 <div class="activities-header">
   <h4>Activités prévues</h4>
-  <button mat-raised-button color="primary" (click)="openActivityDialog()">
-    Ajouter une activité
-  </button>
 </div>
 
 <div class="activities">
@@ -13,6 +10,12 @@
   @if (error()) {
     <div class="error">{{ error() }}</div>
   }
+  @if (!loading() && !error() && activities().length === 0) {
+    <div class="empty">Aucune activité prévue</div>
+  }
+  <button mat-raised-button color="primary" (click)="openActivityDialog()">
+    Ajouter une activité
+  </button>
 
   @for (activity of activities(); track activity.id) {
     <mat-card class="activity-card">
